# buyerReach

./: .editorconfig  .env.example  .gitignore  AGENTS.md  BuyerReach_PRD.docx  BuyerReach_PRD_extracted.txt  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.wsl.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.local  Dockerfile.wsl  Dockerfile.wsl.cached  alembic.ini  pyproject.toml
backend/app/: main.py  proxy_relay.py
backend/app/authz/: __init__.py  catalog.py  context.py  errors.py  hierarchy.py  policy.py  scope.py
backend/app/core/: config.py  crypto.py  database.py  deps.py  security.py
backend/app/modules/: ai_coordinator.py  batch_exact_brand.py  brand_discovery.py  (+11 more)
backend/migrations/: env.py
backend/tests/: test_ai_coordinator.py  test_ai_timeout.py  test_authorization_v1.py  test_batch_exact_brand.py  test_brand_discovery.py  test_candidate_match_review.py  test_catalog_vendor_providers.py  test_concept_matching_v2.py  test_crypto.py  test_domain_email_fallback.py  test_email_authenticity.py  test_email_batch.py  test_login_lockout.py  test_metadata_api.py  test_permission_hierarchy.py  test_pipeline_integrity.py  test_provider_connection_feedback.py  test_provider_error_messages.py  test_provider_extensions.py  test_provider_waterfall.py  test_proxy_relay.py  test_query_plan_models.py  test_query_plan_service.py  test_query_slicing_security.py  test_task_defaults.py  test_task_state.py  test_user_schema.py  test_vendor_execution_plan.py  test_vendor_providers.py  test_vendor_workflow_state.py  test_website_parser.py
(+157 files in other folders)
