[project]
name = "buyerreach-backend"
version = "0.1.0"
description = "BuyerReach V1 FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "celery>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "bcrypt>=4.0.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.5.2",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.12",
  "redis>=5.1.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.31.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "httpx>=0.27.2",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.setuptools.packages.find]
include = ["app*"]
